# bearby-core

./: .gitignore  Cargo.toml
background/src/: bg_bitcoin.rs  bg_book.rs  bg_crypto.rs  bg_provider.rs  bg_settings.rs  bg_storage.rs  bg_token.rs  bg_tx.rs  bg_wallet.rs  bg_worker.rs  lib.rs
cache/: Cargo.toml
cache/src/: lib.rs
cipher/: Cargo.toml
cipher/src/: aes.rs  argon2.rs  cyber.rs  keychain.rs  kuznechik.rs  ntrup.rs
config/src/: storage.rs
crypto/: Cargo.toml
crypto/src/: bip49.rs  schnorr.rs
errors/src/: keypair.rs  wallet.rs
history/: Cargo.toml
history/src/: transaction.rs
network/: Cargo.toml
network/src/: provider.rs
network/src/btc/: mod.rs
network/src/evm/: gas_parse.rs  mod.rs  tx_parse.rs
network/src/solana/: mod.rs  responses.rs  tx_builder.rs
network/src/tron/: mod.rs  responses.rs
network/src/zil/: scilla_stake.rs  stake.rs
proto/: Cargo.toml
proto/src/: address.rs  bip32.rs  btc_msg.rs  btc_tx.rs  btc_utils.rs  keypair.rs  lib.rs  signature.rs  solana_tx.rs  tron_tx.rs  tx.rs
qrcodes/: Cargo.toml
rpc/src/: methods.rs  network_config.rs  provider.rs
session/src/: keychain_store_apple.rs  management.rs
settings/src/: wallet_settings.rs
storage/src/: codec.rs  data_warp.rs  lib.rs
test_data/: Cargo.toml
test_data/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: account.rs  bitcoin_wallet.rs  lib.rs  wallet_account.rs  wallet_crypto.rs  wallet_data.rs  wallet_init.rs  wallet_security.rs  wallet_storage.rs  wallet_token.rs  wallet_transaction.rs  wallet_types.rs
zilpay/: Cargo.toml
zilpay/src/: lib.rs
