[package]
name = "zilpay_core"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/zilpay/zilpay-core"
license = "GPL-3"
authors = ["Rinat.H <hicc0rus@gmail.com>"]
resolver = "2"

[lib]
name = "zilpay"
path = "zilpay/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "background",
  "cipher",
  "config",
  "crypto",
  "network",
  "proto", "session",
  "settings",
  "storage",
  "wallet",
  "errors",
  "rpc",
  "zilpay", "token", "history", "cache", "qrcodes", "intl",
]

[dependencies]
rustls.workspace = true
base64.workspace = true
bs58.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
alloy.workspace = true
rand.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
tokio.workspace = true
reqwest.workspace = true
bitcoin.workspace = true
zeroize.workspace = true
secrecy.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
tokio-tungstenite.workspace = true
solana-hash.workspace = true
solana-instruction.workspace = true
solana-message.workspace = true
solana-pubkey.workspace = true
solana-system-interface.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
zilpay = { path = "./zilpay" }
errors = { path = "./errors" }
background = { path = "./background" }
crypto = { path = "./crypto" }
wallet = { path = "./wallet" }
settings = { path = "./settings" }
config = { path = "./config" }
token = { path = "./token" }
proto = { path = "./proto" }
history = { path = "./history" }
session = { path = "./session" }
rpc = { path = "./rpc" }
cipher = { path = "./cipher" }
network = { path = "./network" }
intl = { path = "./intl" }
cache = { path = "./cache" }
qrcodes = { path = "./qrcodes" }
storage = { path = "./storage" }

[workspace.dependencies]
image = "0.25.10"
async-trait = "0.1.89"
bincode = "1.3.3"
hex = { version = "0.4.3", features = ["serde"] }
serde_json = "1.0.149"
serde = { version = "1", features = ["derive", "rc"] }
alloy = { version = "2", features = ["rlp", "eips", "eip712", "consensus", "signer-local", "k256", "dyn-abi", "json-abi", "rpc-types", "sol-types", "network"], default-features = false }
rand = "0.10.1"
rand_chacha = "0.10.0"
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = ["macros", "rt", "sync", "time"], default-features = false }
ntrulp = { version = "0.2.5", features = ["ntrup761", "std"] }
reqwest = { version = "0.12.23", features = ["rustls-tls", "json", "socks", "gzip", "brotli"], default-features = false }
ripemd = "0.2"
pqbip39 = { version = "0.2.0", features = ["unicode-normalization", "zeroize"] }
k256 = { version = "0.13.4", features = ["ecdsa", "arithmetic"] }
bech32 = "0.11.1"
bs58 = "0.5.1"
base64 = "0.22"
thiserror = "2.0.18"
sled = "0.34.7"
directories = "6.0.0"
hmac = "0.13.0"
rust-argon2 = "2.1.0"
bitcoin = { version = "0.32.8", features = ["serde", "base64"], default-features = false }
secp256k1 = { version = "0.29.1", features = ["global-context", "std"] }
electrum-client = { version = "0.25", default-features = false, features = ["proxy", "use-rustls-ring"] }
rustls = { version = "0.23.37", features = ["ring", "std"], default-features = false }
keyring = { version = "3.6.3", features = ["windows-native", "sync-secret-service"] }
zeroize = { version = "1.8.2", features = ["derive"] }
secrecy = "0.10.3"
prost = "0.13.5"
prost-types = "0.13.5"
rmp-serde = "1.3"
ed25519-dalek = { version = "2.2", features = ["zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
hkdf = "0.13"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
solana-pubkey = { version = "4", features = ["curve25519"] }
solana-hash = "4"
solana-instruction = { version = "3", features = ["serde"] }
solana-message = { version = "3", features = ["serde", "bincode"] }
solana-system-interface = { version = "3", features = ["bincode", "std"] }
spl-token = { version = "9", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8", features = ["no-entrypoint"] }

[dev-dependencies]
mockito = "1.7.2"
