[package]
name = "test_data"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin.workspace = true
config = { path = "../config" }
crypto = { path = "../crypto" }
pqbip39.workspace = true
proto = { path = "../proto" }
rpc = { path = "../rpc" }
rustls.workspace = true
secrecy.workspace = true
token = { path = "../token" }
