[package]
name = "zilpay"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
alloy.workspace = true
rand.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
tokio.workspace = true
reqwest.workspace = true
bitcoin.workspace = true
zeroize.workspace = true
secrecy.workspace = true
thiserror.workspace = true
errors = { path = "../errors" }
intl = { path = "../intl" }
background = { path = "../background" }
crypto = { path = "../crypto" }
cipher = { path = "../cipher" }
rpc = { path = "../rpc" }
wallet = { path = "../wallet" }
token = { path = "../token" }
settings = { path = "../settings" }
config = { path = "../config" }
proto = { path = "../proto" }
history = { path = "../history" }
network = { path = "../network" }
session = { path = "../session" }
cache = { path = "../cache" }
qrcodes = { path = "../qrcodes" }
storage = { path = "../storage" }
